--- a/app/src/main/res/layout/mountain_item.xml
+++ b/app/src/main/res/layout/mountain_item.xml
@@ -19,21 +19,28 @@
                 android:id="@+id/textViewName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/mountainName"
+                android:text="mountainName"
                 android:textSize="60sp"
                 android:textStyle="bold"
-                tools:layout_editor_absoluteX="7dp"
-                tools:layout_editor_absoluteY="-1dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.056"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:text="Berg" />
 
             <TextView
                 android:id="@+id/textViewHeight"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="3dp"
                 android:text="TextView"
                 android:textSize="16sp"
-                tools:layout_editor_absoluteX="7dp"
-                tools:layout_editor_absoluteY="81dp" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.046"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewName"
+                app:layout_constraintVertical_bias="0.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
